# Economics_InflationMexico

./: .env.example  .gitignore  .pre-commit-config.yaml  DASHBOARD_README.md  FullInflation.xlsx  InflationAnalysis.py  Inflation_Analysis.ipynb  README.md  RUN_DASHBOARD.md  RelevantInflation.xlsx  SeriesInflation_ids.xlsx  dashboard.py  debug_dashboard.py  function_module.py  mexican_inflation_analysis.py  minimal_dashboard.py  ponderadores.xlsx  pyproject.toml  requirements.txt  simple_dashboard.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: Inflation_Analysis-checkpoint.ipynb
app/: streamlit_app.py
docs/superpowers/plans/: 2026-04-27-inflation-data-self-heal.md
docs/superpowers/specs/: 2026-04-27-inflation-data-self-heal-design.md
mexican_inflation_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/inflacion/: __init__.py  cli.py  config.py
src/inflacion/analytics/: __init__.py  alt_core.py  base_effect.py  contributions.py  core_breakdown.py  distributions.py  zscore.py
src/inflacion/data/: __init__.py  pipeline.py  ponderadores.py  ponderadores_groups_data.py  quincenal_resolver.py
src/inflacion/inegi/: __init__.py  client.py  series.py  series_catalog_data.py  series_quincenal.py
src/inflacion/viz/: __init__.py  charts.py
tests/: conftest.py  test_alt_core.py  test_base_effect.py  test_client.py  test_client_classify.py  test_client_health.py  test_client_quincenal.py  test_contributions.py  test_core_breakdown.py  test_distributions.py  test_pipeline_monthly.py  test_pipeline_progress.py  test_pipeline_quincenal.py  test_pipeline_self_heal.py  test_ponderadores.py  test_quincenal_catalog.py  test_quincenal_resolver.py  test_series_catalog.py  test_viz_band.py
