[project]
name = "inflacion"
version = "0.1.0"
description = "Análisis de la inflación en México con datos de INEGI (BIE)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "alanvaa06" }]
dependencies = [
  "httpx>=0.27,<0.29",
  "hishel>=0.0.30,<0.1",
  "tenacity>=9.0,<10",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "openpyxl>=3.1,<4",
  "pyarrow>=16.0,<22",
  "scipy>=1.13,<2",
  "plotly>=5.22,<7",
  "streamlit>=1.36,<2",
  "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<7",
  "respx>=0.21,<0.23",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
  "nbstripout>=0.7,<1",
  "nbmake>=1.5,<2",
  "pre-commit>=3.7,<5",
]

[project.scripts]
inflacion = "inflacion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inflacion"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "app", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# El proyecto está en español: ignoramos las advertencias de "carácter ambiguo"
# (acentos, ×, →, "−") que son completamente intencionales.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/inflacion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "live: hits the real INEGI API (opt-in, requires INEGI_API_TOKEN)",
]
